rubric/rux-parser-generated.js
// @generated by Peggy 5.0.6.
//
// https://peggyjs.org/


class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    Module: peg$parseModule,
  };
  let peg$startRuleFunction = peg$parseModule;

  const peg$c0 = "module";
  const peg$c1 = "{";
  const peg$c2 = "}";
  const peg$c3 = "@";
  const peg$c4 = "type:";
  const peg$c5 = "location:";
  const peg$c6 = "version:";
  const peg$c7 = "interface";
  const peg$c8 = "function";
  const peg$c9 = "()";
  const peg$c10 = "->";
  const peg$c11 = "readonly";
  const peg$c12 = ":";
  const peg$c13 = "type";
  const peg$c14 = "state";
  const peg$c15 = "private";
  const peg$c16 = "protected";
  const peg$c17 = "static";
  const peg$c18 = "=";
  const peg$c19 = "imports";
  const peg$c20 = "allow";
  const peg$c21 = "as";
  const peg$c22 = "except:";
  const peg$c23 = "[";
  const peg$c24 = "]";
  const peg$c25 = "external";
  const peg$c26 = "deny";
  const peg$c27 = "constraints";
  const peg$c28 = "exports";
  const peg$c29 = "require";
  const peg$c30 = "warn";
  const peg$c31 = ",";
  const peg$c32 = ".";
  const peg$c33 = "*";
  const peg$c34 = "?";
  const peg$c35 = "--";
  const peg$c36 = ">=";
  const peg$c37 = "<=";
  const peg$c38 = "==";
  const peg$c39 = "null";
  const peg$c40 = "undefined";
  const peg$c41 = "public";
  const peg$c42 = "\"";
  const peg$c43 = "'";
  const peg$c44 = "\\";
  const peg$c45 = "n";
  const peg$c46 = "r";
  const peg$c47 = "t";
  const peg$c48 = "true";
  const peg$c49 = "false";
  const peg$c50 = "//";
  const peg$c51 = "/*";
  const peg$c52 = "*/";

  const peg$r0 = /^[<>]/;
  const peg$r1 = /^[a-zA-Z_$]/;
  const peg$r2 = /^[a-zA-Z0-9_$]/;
  const peg$r3 = /^[\n\r"\\\u2028-\u2029]/;
  const peg$r4 = /^[\n\r'\\\u2028-\u2029]/;
  const peg$r5 = /^[0-9]/;
  const peg$r6 = /^[ \t\n\r]/;
  const peg$r7 = /^[\n\r\u2028\u2029]/;

  const peg$e0 = peg$literalExpectation("module", false);
  const peg$e1 = peg$literalExpectation("{", false);
  const peg$e2 = peg$literalExpectation("}", false);
  const peg$e3 = peg$literalExpectation("@", false);
  const peg$e4 = peg$anyExpectation();
  const peg$e5 = peg$literalExpectation("type:", false);
  const peg$e6 = peg$literalExpectation("location:", false);
  const peg$e7 = peg$literalExpectation("version:", false);
  const peg$e8 = peg$literalExpectation("interface", false);
  const peg$e9 = peg$literalExpectation("function", false);
  const peg$e10 = peg$literalExpectation("()", false);
  const peg$e11 = peg$literalExpectation("->", false);
  const peg$e12 = peg$literalExpectation("readonly", false);
  const peg$e13 = peg$literalExpectation(":", false);
  const peg$e14 = peg$literalExpectation("type", false);
  const peg$e15 = peg$literalExpectation("state", false);
  const peg$e16 = peg$literalExpectation("private", false);
  const peg$e17 = peg$literalExpectation("protected", false);
  const peg$e18 = peg$literalExpectation("static", false);
  const peg$e19 = peg$literalExpectation("=", false);
  const peg$e20 = peg$literalExpectation("imports", false);
  const peg$e21 = peg$literalExpectation("allow", false);
  const peg$e22 = peg$literalExpectation("as", false);
  const peg$e23 = peg$literalExpectation("except:", false);
  const peg$e24 = peg$literalExpectation("[", false);
  const peg$e25 = peg$literalExpectation("]", false);
  const peg$e26 = peg$literalExpectation("external", false);
  const peg$e27 = peg$literalExpectation("deny", false);
  const peg$e28 = peg$literalExpectation("constraints", false);
  const peg$e29 = peg$literalExpectation("exports", false);
  const peg$e30 = peg$literalExpectation("require", false);
  const peg$e31 = peg$literalExpectation("warn", false);
  const peg$e32 = peg$literalExpectation(",", false);
  const peg$e33 = peg$literalExpectation(".", false);
  const peg$e34 = peg$literalExpectation("*", false);
  const peg$e35 = peg$literalExpectation("?", false);
  const peg$e36 = peg$literalExpectation("--", false);
  const peg$e37 = peg$literalExpectation(">=", false);
  const peg$e38 = peg$literalExpectation("<=", false);
  const peg$e39 = peg$classExpectation(["<", ">"], false, false, false);
  const peg$e40 = peg$literalExpectation("==", false);
  const peg$e41 = peg$literalExpectation("null", false);
  const peg$e42 = peg$literalExpectation("undefined", false);
  const peg$e43 = peg$literalExpectation("public", false);
  const peg$e44 = peg$classExpectation([["a", "z"], ["A", "Z"], "_", "$"], false, false, false);
  const peg$e45 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", "$"], false, false, false);
  const peg$e46 = peg$literalExpectation("\"", false);
  const peg$e47 = peg$literalExpectation("'", false);
  const peg$e48 = peg$classExpectation(["\n", "\r", "\"", "\\", ["\u2028", "\u2029"]], false, false, false);
  const peg$e49 = peg$literalExpectation("\\", false);
  const peg$e50 = peg$classExpectation(["\n", "\r", "'", "\\", ["\u2028", "\u2029"]], false, false, false);
  const peg$e51 = peg$literalExpectation("n", false);
  const peg$e52 = peg$literalExpectation("r", false);
  const peg$e53 = peg$literalExpectation("t", false);
  const peg$e54 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e55 = peg$literalExpectation("true", false);
  const peg$e56 = peg$literalExpectation("false", false);
  const peg$e57 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false, false);
  const peg$e58 = peg$literalExpectation("//", false);
  const peg$e59 = peg$literalExpectation("/*", false);
  const peg$e60 = peg$literalExpectation("*/", false);
  const peg$e61 = peg$classExpectation(["\n", "\r", "\u2028", "\u2029"], false, false, false);

  function peg$f0(annotations, name, body) {    return makeNode('Module', { name, annotations, body });  }
  function peg$f1(item) {    return item;  }
  function peg$f2(items) {    return items.filter(item => item !== null);  }
  function peg$f3(text) {    return makeNode('Annotation', { text: text.trim() });  }
  function peg$f4(char) {    return char;  }
  function peg$f5(chars) {    return chars.join('');  }
  function peg$f6(value) {    return makeNode('TypeDeclaration', { value });  }
  function peg$f7(value) {    return makeNode('LocationDeclaration', { value });  }
  function peg$f8(value) {    return makeNode('VersionDeclaration', { value });  }
  function peg$f9(members) {    return makeNode('Interface', { members });  }
  function peg$f10(member) {    return member;  }
  function peg$f11(members) {    return members.filter(m => m !== null);  }
  function peg$f12(visibility, name, returnType) {
    return makeNode('FunctionDeclaration', {
      visibility: visibility || 'public',
      name,
      returnType
    });
  }
  function peg$f13(visibility, readonly, name, type) {
    return makeNode('PropertyDeclaration', {
      visibility: visibility || 'public',
      readonly: !!readonly,
      name,
      type
    });
  }
  function peg$f14(visibility, name) {
    return makeNode('InterfaceTypeDeclaration', {
      visibility: visibility || 'public',
      name
    });
  }
  function peg$f15(members) {    return makeNode('State', { members });  }
  function peg$f16(member) {    return member;  }
  function peg$f17(members) {    return members.filter(m => m !== null);  }
  function peg$f18(visibility, isStatic, readonly, name, type, value) {    return value;  }
  function peg$f19(visibility, isStatic, readonly, name, type, initializer) {
    return makeNode('StateProperty', {
      visibility: visibility || 'private',
      isStatic: !!isStatic,
      readonly: !!readonly,
      name,
      type,
      initializer
    });
  }
  function peg$f20(rules) {    return makeNode('Imports', { rules });  }
  function peg$f21(rule) {    return rule;  }
  function peg$f22(rules) {    return rules.filter(r => r !== null);  }
  function peg$f23(path, a) {    return a;  }
  function peg$f24(path, alias, e) {    return e;  }
  function peg$f25(path, alias, exceptions) {
    return makeNode('AllowRule', {
      path,
      alias: alias || null,
      exceptions: exceptions || []
    });
  }
  function peg$f26() {    return { type: 'external' };  }
  function peg$f27(names) {    return { type: 'named', names };  }
  function peg$f28(name) {    return { type: 'default', name };  }
  function peg$f29(patterns, e) {    return e;  }
  function peg$f30(patterns, exceptions) {    return makeNode('DenyRule', { patterns, exceptions: exceptions || [] });  }
  function peg$f31(rules) {    return makeNode('Constraints', { rules });  }
  function peg$f32(rule) {    return rule;  }
  function peg$f33(rules) {    return rules.filter(r => r !== null);  }
  function peg$f34(patterns, e) {    return e;  }
  function peg$f35(patterns, exceptions) {
    return makeNode('DenyExportsRule', {
      patterns,
      exceptions: exceptions || []
    });
  }
  function peg$f36(patterns, e) {    return e;  }
  function peg$f37(patterns, exceptions) {
    return makeNode('DenyImportsRule', {
      patterns,
      exceptions: exceptions || []
    });
  }
  function peg$f38(pattern, comparison, comment, e) {    return e;  }
  function peg$f39(pattern, comparison, comment, exceptions) {
    return makeNode('DenyConstraintRule', {
      pattern,
      comparison: comparison || null,
      comment: comment || null,
      exceptions: exceptions || []
    });
  }
  function peg$f40(patterns, e) {    return e;  }
  function peg$f41(patterns, exceptions) {
    return makeNode('RequireExportsRule', {
      patterns,
      exceptions: exceptions || []
    });
  }
  function peg$f42(pattern, comparison, comment, e) {    return e;  }
  function peg$f43(pattern, comparison, comment, exceptions) {
    return makeNode('RequireRule', {
      pattern,
      comparison: comparison || null,
      comment: comment || null,
      exceptions: exceptions || []
    });
  }
  function peg$f44(pattern, comparison, comment, e) {    return e;  }
  function peg$f45(pattern, comparison, comment, exceptions) {
    return makeNode('WarnRule', {
      pattern,
      comparison: comparison || null,
      comment: comment || null,
      exceptions: exceptions || []
    });
  }
  function peg$f46(first, pattern) {    return pattern;  }
  function peg$f47(first, rest) {    return [first, ...rest];  }
  function peg$f48(parts) {    return parts.join('');  }
  function peg$f49() {    return ".";  }
  function peg$f50() {    return "*";  }
  function peg$f51() {    return "?";  }
  function peg$f52(char) {    return char;  }
  function peg$f53(chars) {    return "[" + chars.join('') + "]";  }
  function peg$f54(first, str) {    return str;  }
  function peg$f55(first, rest) {    return [first, ...rest];  }
  function peg$f56(first, part) {    return "." + part;  }
  function peg$f57(first, rest) {    return first + rest.join('');  }
  function peg$f58(text) {    return text.trim();  }
  function peg$f59(char) {    return char;  }
  function peg$f60(chars) {    return chars.join('');  }
  function peg$f61(op, value) {    return { op, value };  }
  function peg$f62(first, name) {    return name;  }
  function peg$f63(first, rest) {    return [first, ...rest];  }
  function peg$f64(name, optional) {    return optional ? name + "?" : name;  }
  function peg$f65() {    return null;  }
  function peg$f66() {    return undefined;  }
  function peg$f67(first, rest) {    return first + rest.join('');  }
  function peg$f68(chars) {    return chars.join('');  }
  function peg$f69(chars) {    return chars.join('');  }
  function peg$f70(char) {    return char;  }
  function peg$f71(sequence) {    return sequence;  }
  function peg$f72(char) {    return char;  }
  function peg$f73(sequence) {    return sequence;  }
  function peg$f74() {    return "\n";  }
  function peg$f75() {    return "\r";  }
  function peg$f76() {    return "\t";  }
  function peg$f77() {    return "\\";  }
  function peg$f78() {    return '"';  }
  function peg$f79() {    return "'";  }
  function peg$f80(digits) {    return parseInt(digits.join(''), 10);  }
  function peg$f81() {    return true;  }
  function peg$f82() {    return false;  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseModule() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = [];
    s3 = peg$parseAnnotation();
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$parseAnnotation();
    }
    s3 = peg$parse_();
    if (input.substr(peg$currPos, 6) === peg$c0) {
      s4 = peg$c0;
      peg$currPos += 6;
    } else {
      s4 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s4 !== peg$FAILED) {
      s5 = peg$parse_();
      s6 = peg$parseIdentifier();
      if (s6 !== peg$FAILED) {
        s7 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 123) {
          s8 = peg$c1;
          peg$currPos++;
        } else {
          s8 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e1); }
        }
        if (s8 !== peg$FAILED) {
          s9 = peg$parse_();
          s10 = peg$parseModuleBody();
          s11 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 125) {
            s12 = peg$c2;
            peg$currPos++;
          } else {
            s12 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e2); }
          }
          if (s12 !== peg$FAILED) {
            s13 = peg$parse_();
            peg$savedPos = s0;
            s0 = peg$f0(s2, s6, s10);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseModuleBody() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = peg$parse_();
    s4 = peg$parseModuleItem();
    if (s4 !== peg$FAILED) {
      s5 = peg$parse_();
      peg$savedPos = s2;
      s2 = peg$f1(s4);
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$currPos;
      s3 = peg$parse_();
      s4 = peg$parseModuleItem();
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        peg$savedPos = s2;
        s2 = peg$f1(s4);
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    }
    peg$savedPos = s0;
    s1 = peg$f2(s1);
    s0 = s1;

    return s0;
  }

  function peg$parseModuleItem() {
    let s0;
